# conch

./: .gitignore  CONTRIBUTING_GUIDE.md  Justfile  README.md  conch.wasm  lib.typ  typst.toml
.github/workflows/: ci.yml
demo/: chrome.typ  demo.typ  frame.typ  include-files.typ  paginate.typ  permissions.typ  pipes.typ  plugin-typst.typ  plugin-wasm.typ  script.typ  shell.typ  themes.typ  touying.typ
src/: chrome.typ  frame.typ  render.typ  session.typ  terminal.typ  theme.typ
template/: main.typ
wasm/: Cargo.toml
wasm/bare-vfs/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
wasm/bare-vfs/src/: dir.rs  entry.rs  error.rs  fs.rs  handle.rs  lib.rs  metadata.rs  open_options.rs  path.rs
wasm/bare-vfs/src/fs/: inode.rs  mod.rs  node.rs  readdir.rs  serde_impl.rs  tests.rs  traverse.rs  walk.rs
wasm/bare-vfs/src/fs/tests/: edge_cases.rs  hardlink.rs  iterators.rs  mod.rs  ops.rs  permissions.rs  query.rs  review.rs  serde.rs  symlink.rs  timestamps.rs
wasm/conch-wasm/: Cargo.toml  README.md
wasm/conch-wasm/src/: ansi.rs  keyline.rs  lib.rs  parser.rs  plugin_host.rs  shell.rs  str_type.rs  types.rs  userdb.rs
wasm/conch-wasm/src/commands/: fs.rs  inspect.rs  mod.rs  nav.rs  script.rs  text.rs  transform.rs  user.rs
wasm/conch-wasm/src/script/: arith.rs  ast.rs  interp.rs  mod.rs  parse.rs  span.rs  tokenize.rs  word.rs  word_parser.rs
wasm/conch-wasm/src/shell/: arrays.rs  builtins.rs  exec_structured.rs  expand.rs  expand_word.rs  heredoc.rs  mod.rs  pipeline.rs  util.rs
wasm/conch-wasm/src/shell/tests/: arrays.rs  builtins_new.rs  core.rs  expand.rs  fs.rs  glob.rs  inspect.rs  mod.rs  nav.rs  pipeline.rs  process.rs  script.rs  shell.rs  text.rs  transform.rs  user.rs
wasm/demo-plugin/: Cargo.toml
wasm/demo-plugin/src/: lib.rs
wasm/src/: ansi.rs  keyline.rs  lib.rs  shell.rs  types.rs
wasm/src/commands/: fs.rs  nav.rs  text.rs
