[package]
name = "bare-vfs"
version = "0.1.0"
edition = "2021"
description = "A minimal, synchronous, in-memory virtual filesystem for no_std and wasm32-unknown-unknown"
license = "MIT OR Apache-2.0"
keywords = ["vfs", "filesystem", "wasm", "no_std", "virtual"]
categories = ["filesystem", "no-std", "wasm"]
include = ["src/**", "README.md", "LICENSE-*"]

[features]
default = []
std = []
