[package]
name = "conch-wasm"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "conch"
crate-type = ["cdylib"]

[dependencies]
bare-vfs = { path = "../bare-vfs" }
wasm-minimal-protocol = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
lexopt = "0.3"
winnow = { version = "1", default-features = false, features = ["alloc", "parser"] }
regex-lite = "0.1"
compact_str = { version = "0.9", features = ["serde"] }
wasmi = { version = "1.0.9", default-features = false }
